--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <html><head></head>
-  <body>jitender</body>
+  <body>jitender
+    <iframe src="https://www.google.com/"></iframe>
+  </body>
 </html>
