--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head></head>
   <body>jitender
-    <iframe src="https://www.google.com/"></iframe>
+    <iframe src="https://www.lab.inferyx.com/"></iframe>
   </body>
 </html>
