--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><head></head>
   <body>jitender
-    <iframe src="https://www.lab.inferyx.com/"></iframe>
+    <iframe src="demo_iframe.htm" height="200" width="300" title="Iframe Example"></iframe>
   </body>
 </html>
